--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@500;700&display=swap");
 
 body {
   margin: 0;
-  font-family: "Ibm Plex Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  font-family: "Impact";
+  font-weight: 700;
+  color: maroon;
+}
+
+p, a, span {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
 code {
