--- a/frontend/src/Components/pages/Home.css
+++ b/frontend/src/Components/pages/Home.css
@@ -5,42 +5,34 @@
 .column {
     flex: 50%;
     padding: 10px;
-}:root{
-    --primary: white;
 }
-
-.btn{
-    padding: 8px 20px;
-    border-radius: 2px;
-    outline: none;
-    border: none;
-    cursor: pointer;
-}
-
-.btn--primary{
-    background-color: var(--primary);
-    color:black;
-    border: 1px solid var(--primary);
-}
-
-.btn--outline{
-    background-color: transparent;
+.button-31 {
+    background-color: #222;
+    border-radius: 4px;
+    border-style: none;
+    box-sizing: border-box;
     color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+    max-width: none;
+    min-height: 44px;
+    min-width: 10px;
+    outline: none;
+    overflow: hidden;
     padding: 8px 20px;
-    border: 1px solid var(--primary);
-    transition: all 0.3s ease-out;
-}
-
-.btn--large{
-    padding: 12px 26px;
-    font-size: 20px;
-}
-
-.btn--medium:hover, 
-.btn--large:hover{
-
-    background: white;
-    color:black;
-    transition: 250ms;
-    transition: all 0.3s ease-out; 
-}
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 10%;
+  }
+  
+  .button-31:hover,
+  .button-31:focus {
+    opacity: .75;
+  }
